@@ -1,3 +1,8 @@
+2015-02-08 belangeo <belangeo@gmail.com>
+
+    * E-Pyo: Added a refresh button to actualize the content of the folder panel.
+    - rev 1292
+
 2015-02-07 belangeo <belangeo@gmail.com>
 
     * E-Pyo: Added a menu item to set a master document (the one that will be executed whatever 
